--- a/frontend/templates/main.html
+++ b/frontend/templates/main.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <title>SORBİ</title>
-</head>
-<body>
-  {% extends "base.html" %}
 
-{% block title %}Anasayfa{% endblock %}
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Sorbi | Anasayfa{% endblock %}
+
+{% block content %}
+{% endblock %}
