--- a/frontend/templates/progress.html
+++ b/frontend/templates/progress.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sorularım{% endblock %}
+{% block title %}Sorbi | İlerleme{% endblock %}
 
 {% block content %}
   <section>
