--- a/frontend/templates/signup.html
+++ b/frontend/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends "base_auth.html" %}
 
-{% block title %}Sorbi | Giriş Yap{% endblock %}
+{% block title %}Sorbi | Kayıt Ol{% endblock %}
 
 {% block content %}
 
