--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -44,7 +44,7 @@ body {
 .bg-top {
   width: 100%;
   height: 50vh;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 .bg-bottom {
@@ -65,6 +65,7 @@ body {
   justify-content: center;
   align-items: center;
   transition: width 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5), 0 2px 6px rgba(0, 0, 0, 0.08);
 }
 
 main {
@@ -76,7 +77,7 @@ main {
 header {
   height: 60px;
   width: 100%;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -137,8 +138,6 @@ header {
   /* İkon boyutu */
   width: 24px;
   object-fit: contain;
-  /* Aktif olmayan ikonlar için renk ayarı */
-  filter: brightness(0) saturate(100%) invert(10%) sepia(20%) saturate(1478%) hue-rotate(189deg) brightness(91%) contrast(93%);
   /* Lacivert ikon */
   transition: filter 0.3s ease;
   z-index: 15;
@@ -171,7 +170,7 @@ header {
 
 /* Aktif menü öğesinin içindeki ikon çemberi */
 .active-menu-item .icon-circle {
-  background-color: var(--secondary-color);
+  background-color: var(--accent-color);
   /* Aktifken ikon çemberi lacivert olsun */
 }
 
@@ -239,6 +238,17 @@ header {
   height: 10%;
 }
 
+.sidebar-badges {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  overflow: hidden;        /* Fazlası taşmasın */
+  max-height: 60px;        /* Yüksekliği sabitle */
+}
+
+
 .sidebar-logo {
   width: 100%;
   height: 15%;
@@ -301,6 +311,7 @@ header {
 
 .sidebar-badges img {
   height: 70%;
+  max-height: 40px;
 }
 
 .sidebar-exam {
@@ -439,4 +450,115 @@ main {
   pointer-events: none;
   transform: translateX(-20px);
   transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+/* Hamburger menü başlangıçta gizli */
+.hamburger, .mobile-quit, .mobile-logo, .mobile-menu{
+  display: none;
+}
+
+
+/* BASE AUTH */
+
+
+
+
+
+
+
+
+
+/* Mobil görünümde aktif olacak stiller */
+@media (max-width: 768px) {
+  main {
+    width: 100% !important;
+  }
+
+  .sidebar,
+  .sidebar-background, .rightmenu, .leftmenu {
+    display: none !important;
+  }
+
+  .menu-item-wrapper {
+    display: none !important;
+  }
+
+  .hamburger {
+    display: flex !important;
+    height: 60px;
+    width: 60px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding: 0 20px;
+  }
+
+  .hamburger img {
+    height: 30px;
+    width: 30px;
+  }
+
+  .mobile-menu {
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: white;
+    z-index: 999;
+    padding: 10px 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+  }
+
+  .mobile-menu a {
+    display: block;
+    padding: 10px 0;
+    text-decoration: none;
+    color: var(--text-color);
+    border-bottom: 1px solid #ddd;
+  }
+
+  .mobile-logo{
+    display: flex !important;
+    height: 60px;
+    width: calc(100% - 60px);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mobile-logo img{
+    height: 40px;
+  }
+
+  .mobile-quit {
+    display: flex !important;
+    height: 60px;
+    width: 60px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding: 0 20px;
+  }
+
+  .mobile-quit img {
+    height: 20px;
+    width: 20px;
+  }
+
+  
+}
+
+@media (max-width: 1023px) {
+  .sidebar-badges img:nth-child(n+4) {
+    display: none;
+  }
+
+  .sidebar-badges {
+    max-height: 60px;
+    gap: 6px;
+  }
+
+  .sidebar-badges img {
+    max-height: 60px;
+  }
 }
