--- a/frontend/templates/exams.html
+++ b/frontend/templates/exams.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sorularım{% endblock %}
+{% block title %}Sorbi | Sorularım{% endblock %}
 
 {% block content %}
-  <section>
-    <h1>Forum Sayfası</h1>
-    <p>Forum içerikleri buraya gelecek...</p>
-  </section>
 {% endblock %}
